added link to js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
   <head>
     <meta charset="utf-8">
-    <title>NPower Canada</title>
+    <title>NPower Canada is the best</title>
+    <script src="js/interactions.js"></script>
   </head>
 
   <body>
