npower toronto is the best

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>NPower Canada is the best</title>
+    <title>NPower Canada</title>
     <script src="js/interactions.js"></script>
   </head>
 
