--- a/practice2.html
+++ b/practice2.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>NPower Canada Here it is</title>
+    <title>NPower Canada this is the test</title>
     <script></script>
   </head>
 
