--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- logo -->
              
               <a href="#">
-               	<img src="images/npower-tsc-canada-logo.CYAN.png" id="npowerlogo">  
+               	<img src="images/npower-tsc-canada-logo.CYAN.png" id="npowerlogo" width="400px">  
               </a>
            </header>
         
