--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
       </nav>
       <section id="banner">
         Banner
+          <img id="bannerpic"> <!-- banner pic-->
       </section>
       <section>
         <article>
