--- a/Aboutus.html
+++ b/Aboutus.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <title>Page title</title>
-	<link href="css/style.css" type="text/css" rel="stylesheet">
+	<link href="css/style.css" type="text/css" rel="stylesheet">ne
+	<!--- please connect webpage -->
 </head>
 
 
