--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <img id="bannerpic"> <!-- banner pic-->
       </section>
       <section>
-        <article>
+        <article id ="texta">
           <!--some words here-->
           Our talented alumni are currently working at Soroc           Technology, RBC, Deloitte, Virgin Mobile,         Cognizant, Rogers, TDot Performance, Synnex Canada, Bullfrog Power, CDI Computers, Morneau Shepell and other leading companies. 
 
