--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@ Technology Service Corps Canada:
          </article> 
 
       </section>
-      <footer>
-        contact Us
+      <footer id="footertext">
+          Contact us |About us| Location |
       </footer>
 
 
