--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
            </header>
         
           <div id="socialMedia">
-		  	<a href="#"><img src="#" id="LinkedIn">LinkedIn</a>
-			<a href="#"><img src="#" id="Facebook">Facebook</a>
-			<a href="#"><img src="#" id="Twitter">Twitter</a>
-			<a href="#"><img src="#" id="Tumblr">Tumblr</a>
+		  	<a href="#"><img src="https://www.linkedin.com/company/npower-ny" id="LinkedIn">LinkedIn</a>
+			<a href="#"><img src="https://www.facebook.com/npower.org/" id="Facebook">Facebook</a>
+			<a href="#"><img src="https://twitter.com/NPowerOrg" id="Twitter">Twitter</a>
+			<a href="#"><img src="http://npowercommunityblog.tumblr.com/" id="Tumblr">Tumblr</a>
 		  </div>
        </div>
       <nav>
