--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<a href="#"><img src="https://www.facebook.com/npower.org/" id="Facebook">Facebook</a>
 			<a href="#"><img src="https://twitter.com/NPowerOrg" id="Twitter">Twitter</a>
 			<a href="#"><img src="http://npowercommunityblog.tumblr.com/" id="Tumblr">Tumblr</a>
+			<a href="#"><img src="https://www.youtube.com/user/NPowerOrg" id="Youtube">Youtube</a>
 		  </div>
        </div>
       <nav>
