--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
            </header>
         
           <div id="socialMedia">
-		  	<a href="#"><img src="https://www.linkedin.com/company/npower-ny" id="LinkedIn">LinkedIn</a>
-			<a href="#"><img src="https://www.facebook.com/npower.org/" id="Facebook">Facebook</a>
-			<a href="#"><img src="https://twitter.com/NPowerOrg" id="Twitter">Twitter</a>
-			<a href="#"><img src="http://npowercommunityblog.tumblr.com/" id="Tumblr">Tumblr</a>
-			<a href="#"><img src="https://www.youtube.com/user/NPowerOrg" id="Youtube">Youtube</a>
+		  	<a href="https://www.linkedin.com/company/npower-ny"><img src="" id="LinkedIn">LinkedIn</a>
+			<a href="https://www.facebook.com/npower.org/"><img src="" id="Facebook">Facebook</a>
+			<a href="https://twitter.com/NPowerOrg"><img src="" id="Twitter">Twitter</a>
+			<a href="http://npowercommunityblog.tumblr.com/"><img src="" id="Tumblr">Tumblr</a>
+			<a href="https://www.youtube.com/user/NPowerOrg"><img src="" id="Youtube">Youtube</a>
 		  </div>
        </div>
       <nav>
