--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 		 <div class="dropdown">
 			<button onclick="myFunction()" class="dropbtn">Menu</button>
 			<div id="myDropdown" class="dropdown-content">
-				<a href="#">About Us</a>
-				<a href="#">Our Programs</a>
-				<a href="#">Our Partners</a>
-				<a href="#">Get Engaged</a>
-				<a href="#">News and Events</a>
-				<a href="#">Locations</a>
+				<a href="Aboutus.html">About Us</a>
+				<a href="OurPrograms.html">Our Programs</a>
+				<a href="OurPartners.html">Our Partners</a>
+				<a href="GetEngaged.html">Get Engaged</a>
+				<a href="NewsandEvents.html">News and Events</a>
+				<a href="Locations.html">Locations</a>
 			</div>
 		</div>
 		
