--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>NPower Canada</title>
 	<link href="css/style.css" type="text/css" rel="stylesheet">
+	<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 	<script src="js/interact.js"></script>
 </head>
   
