--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           <div id="socialMedia">
 		  	<a href="https://www.linkedin.com/company/npower-ny"><img src="images/png/linkedin.png" id="LinkedIn">LinkedIn</a>
 			<a href="https://www.facebook.com/npower.org/"><img src="images/png/FB-f-Logo__blue_29.png" id="Facebook">Facebook</a>
-			<a href="https://twitter.com/NPowerOrg"><img src="images/png/TwitterLogo_#55acee.png" id="Twitter">Twitter</a>
-			<a href="http://npowercommunityblog.tumblr.com/"><img src="images/png/tumblr_logo_blue-white-16.png" id="Tumblr">Tumblr</a>
+			<a href="https://twitter.com/NPowerOrg"><img src="images/png/brand guideline logos/TwitterLogo_#55acee.png" id="Twitter">Twitter</a>
+			<a href="http://npowercommunityblog.tumblr.com/"><img src="images/png/tumblr_logo_blue-white 2/tumblr_logo_blue-white-16.png" id="Tumblr">Tumblr</a>
 			<a href="https://www.youtube.com/user/NPowerOrg"><img src="images/png/youtube.png" id="Youtube">Youtube</a>
 		  </div>
        </div>
@@ -107,69 +107,69 @@ NPower Canada has opened its doors at Ryerson University. The office will serve 
 				<tr> 
 					<td>
 						<a href="#">
-               				<img src="#" id="sponsor1">  
+               				<img src="icon/Class 10 copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="#" id="sponsor1">  
+               				<img src="icon/Class 9 copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="#" id="sponsor1">  
+               				<img src="icon/Class 8 copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="#" id="sponsor1">  
+               				<img src="icon/Class 7 copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="#" id="sponsor1">  
+               				<img src="icon/Class 6 copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="#" id="sponsor1">  
+               				<img src="icon/Class 5 copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="#" id="sponsor1">  
+               				<img src="icon/Class 4 copy.png" id="sponsor1">  
               			</a>
 					</td>
 				</tr>
 			  	<tr>
 					<td>
 						<a href="#">
-               				<img src="#" id="sponsor1">  
+               				<img src="icon/Class 3 copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="#" id="sponsor1">  
+               				<img src="icon/Class 2 copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="#" id="sponsor1">  
+               				<img src="icon/Class 1 copy.png"id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="#" id="sponsor1">  
+               				<img src="" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="#" id="sponsor1">  
+               				<img src="" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="#" id="sponsor1">  
+               				<img src="" id="sponsor1">  
               			</a>
 					</td>
 					<td>
