--- a/index.html
+++ b/index.html
@@ -19,7 +19,17 @@
               <a href="#">
                	<img src="images/npower-tsc-canada-logo.CYAN.png" id="npowerlogo" width="400px">  
               </a>
-			  <p><small>Slogan here here here Slogan</small></p>
+			  <p><small>	*SOLGAN IDEAS* 
+			  	 	The Power of learNing is on your side
+					LearNing is Power
+					You got the Power to LearN
+					Learning starts with you
+					Learning + Power = You
+					Where Learning + Power = A greater You
+					Learning + Power = A greater You 
+					-Npower + you = A greater You
+					the world of bussniess and tech is in your hands
+					the Power to LearN is in your hands</small></p>
            </header>
         
           <div id="socialMedia">
@@ -196,10 +206,10 @@ Technology Service Corps Canada:
        <h2> Contact</h2>
 			 
 	   <div id="footMediaLinks">
-		 <a href="#"><img src="#" id="LinkedIn"></a>
-		 <a href="#"><img src="#" id="Facebook"></a>
-		 <a href="#"><img src="#" id="Twitter"></a>
-		 <a href="#"><img src="#" id="Tubmlr"></a>
+		 <a href="#"><img src="images/png/linkedin.png" id="LinkedIn"></a>
+		 <a href="#"><img src=src="images/png/FB-f-Logo__blue_29.png" id="Facebook"></a>
+		 <a href="#"><img src="images/png/brand guideline logos/TwitterLogo_#55acee.png" id="Twitter"></a>
+		 <a href="#"><img src="images/png/tumblr_logo_blue-white 2/tumblr_logo_blue-white-16.png" id="Tubmlr"></a>
 	   </div>
 	</div>
 	   <p><small>Copyright 1999-2050 by Refsnes Data <a href="#">| Privacy Policy |</a><a href="#">| Resource Center |</a><a href="#">| Contact Us |</a></small></p>
