--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
                	<img src="images/npower-tsc-canada-logo.CYAN.png" id="npowerlogo" width="400px">  
               </a>
 			  <p><small>	*SOLGAN IDEAS* 
-			  	 	The Power of learNing is on your side
-					LearNing is Power
-					You got the Power to LearN
-					Learning starts with you
-					Learning + Power = You
-					Where Learning + Power = A greater You
-					Learning + Power = A greater You 
-					-Npower + you = A greater You
-					the world of bussniess and tech is in your hands
-					the Power to LearN is in your hands</small></p>
+			  	 <br>	The Power of learNing is on your side</br>
+				<br>	LearNing is Power</br>
+				<br>	You got the Power to LearN</br>
+				<br>	Learning starts with you</br>
+				<br>	Learning + Power = You</br>
+				<br>	Where Learning + Power = A greater You</br>
+				<br>	Learning + Power = A greater You </br>
+				<br>	-Npower + you = A greater You</br>
+				<br>	the world of bussniess and tech is in your hands</br>
+				<br>	the Power to LearN is in your hands</small></p></br>
            </header>
         
           <div id="socialMedia">
