--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           <div id="socialMedia">
 		  	<a href="https://www.linkedin.com/company/npower-ny"><img src="images/png/linkedin.png" id="LinkedIn">LinkedIn</a>
 			<a href="https://www.facebook.com/npower.org/"><img src="images/png/FB-f-Logo__blue_29.png" id="Facebook">Facebook</a>
-			<a href="https://twitter.com/NPowerOrg"><img src="images/png/brand guideline logos/TwitterLogo_#55acee.png" id="Twitter">Twitter</a>
-			<a href="http://npowercommunityblog.tumblr.com/"><img src="images/png/tumblr_logo_blue-white 2/tumblr_logo_blue-white-16.png" id="Tumblr">Tumblr</a>
+			<a href="https://twitter.com/NPowerOrg"><img src="images/brandguidelinelogos/TwitterLogo_#55acee.png" id="Twitter">Twitter</a>
+			<a href="http://npowercommunityblog.tumblr.com/"><img src="images/tumblrlogobluewhite2/tumblr_logo_blue-white-32.png" id="Tumblr">Tumblr</a>
 			<a href="https://www.youtube.com/user/NPowerOrg"><img src="images/png/youtube.png" id="Youtube">Youtube</a>
 		  </div>
        </div>
