--- a/index.html
+++ b/index.html
@@ -117,54 +117,54 @@ NPower Canada has opened its doors at Ryerson University. The office will serve 
 				<tr> 
 					<td>
 						<a href="#">
-               				<img src="icon/Class 10 copy.png" id="sponsor1">  
+               				<img src="icon/Class10copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class 9 copy.png" id="sponsor1">  
+               				<img src="icon/Class9copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class 8 copy.png" id="sponsor1">  
+               				<img src="icon/Class8copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class 7 copy.png" id="sponsor1">  
+               				<img src="icon/Class7copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class 6 copy.png" id="sponsor1">  
+               				<img src="icon/Class6copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class 5 copy.png" id="sponsor1">  
+               				<img src="icon/Class5copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class 4 copy.png" id="sponsor1">  
+               				<img src="icon/Class4copy.png" id="sponsor1">  
               			</a>
 					</td>
 				</tr>
 			  	<tr>
 					<td>
 						<a href="#">
-               				<img src="icon/Class 3 copy.png" id="sponsor1">  
+               				<img src="icon/Class3copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class 2 copy.png" id="sponsor1">  
+               				<img src="icon/Class2copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class copy.png"id="sponsor1">  
+               				<img src="icon/Classcopy.png"id="sponsor1">  
               			</a>
 					</td>
 					<td>
@@ -208,7 +208,7 @@ Technology Service Corps Canada:
 	   <div id="footMediaLinks">
 		 <a href="#"><img src="images/png/linkedin.png" id="LinkedIn"></a>
 		 <a href="#"><img src=src="images/png/FB-f-Logo__blue_29.png" id="Facebook"></a>
-		 <a href="#"><img src="images/png/brand guideline logos/TwitterLogo_#55acee.png" id="Twitter"></a>
+		 <a href="#"><img src="images/brandguidelinelogos/TwitterLogo_#55acee.png" id="Twitter"></a>
 		 <a href="#"><img src="images/png/tumblr_logo_blue-white 2/tumblr_logo_blue-white-16.png" id="Tubmlr"></a>
 	   </div>
 	</div>
