--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
            </header>
         
           <div id="socialMedia">
-		  	<a href="https://www.linkedin.com/company/npower-ny"><img src="images/png/linkedin.png" id="LinkedIn">LinkedIn</a>
-			<a href="https://www.facebook.com/npower.org/"><img src="images/png/FB-f-Logo__blue_29.png" id="Facebook">Facebook</a>
+		  	<a href="https://www.linkedin.com/company/npower-ny"><img src="images/png/linkedin.png" id="LinkedIn"></a>
+			<a href="https://www.facebook.com/npower.org/"><img src="images/png/FB-f-Logo__blue_29.png" id="Facebook"></a>
 			<a href="https://twitter.com/NPowerOrg"><img src="images/brandguidelinelogos/TwitterLogo_55acee.png" id="Twitter">Twitter</a>
-			<a href="http://npowercommunityblog.tumblr.com/"><img src="images/tumblrlogobluewhite2/tumblr_logo_blue-white-32.png" id="Tumblr">Tumblr</a>
-			<a href="https://www.youtube.com/user/NPowerOrg"><img src="images/png/youtube.png" id="Youtube">Youtube</a>
+			<a href="http://npowercommunityblog.tumblr.com/"><img src="images/tumblrlogobluewhite2/tumblr_logo_blue-white-32.png" id="Tumblr"></a>
+			<a href="https://www.youtube.com/user/NPowerOrg"><img src="images/png/youtube.png" id="Youtube"></a>
 		  </div>
        </div>
       <nav>
@@ -206,11 +206,11 @@ Technology Service Corps Canada:
        <h2> Contact</h2>
 			 
 	   <div id="footMediaLinks">
-		<a href="https://www.linkedin.com/company/npower-ny"><img src="images/png/linkedin.png" id="LinkedIn">LinkedIn</a>
-			<a href="https://www.facebook.com/npower.org/"><img src="images/png/FB-f-Logo__blue_29.png" id="Facebook">Facebook</a>
+		<a href="https://www.linkedin.com/company/npower-ny"><img src="images/png/linkedin.png" id="LinkedIn"></a>
+			<a href="https://www.facebook.com/npower.org/"><img src="images/png/FB-f-Logo__blue_29.png" id="Facebook"></a>
 			<a href="https://twitter.com/NPowerOrg"><img src="images/brandguidelinelogos/TwitterLogo_55acee.png" id="Twitter">Twitter</a>
-			<a href="http://npowercommunityblog.tumblr.com/"><img src="images/tumblrlogobluewhite2/tumblr_logo_blue-white-32.png" id="Tumblr">Tumblr</a>
-			<a href="https://www.youtube.com/user/NPowerOrg"><img src="images/png/youtube.png" id="Youtube">Youtube</a>
+			<a href="http://npowercommunityblog.tumblr.com/"><img src="images/tumblrlogobluewhite2/tumblr_logo_blue-white-32.png" id="Tumblr"></a>
+			<a href="https://www.youtube.com/user/NPowerOrg"><img src="images/png/youtube.png" id="Youtube"></a>
 	   </div>
 
 	</div>
