--- a/index.html
+++ b/index.html
@@ -122,49 +122,49 @@ NPower Canada has opened its doors at Ryerson University. The office will serve 
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class9copy.png" id="sponsor1">  
+               				<img src="images/icon/Class9copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class8copy.png" id="sponsor1">  
+               				<img src="images/icon/Class8copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class7copy.png" id="sponsor1">  
+               				<img src="images/icon/Class7copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class6copy.png" id="sponsor1">  
+               				<img src="images/icon/Class6copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class5copy.png" id="sponsor1">  
+               				<img src="images/icon/Class5copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class4copy.png" id="sponsor1">  
+               				<img src="images/icon/Class4copy.png" id="sponsor1">  
               			</a>
 					</td>
 				</tr>
 			  	<tr>
 					<td>
 						<a href="#">
-               				<img src="icon/Class3copy.png" id="sponsor1">  
+               				<img src="images/icon/Class3copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Class2copy.png" id="sponsor1">  
+               				<img src="images/icon/Class2copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="icon/Classcopy.png"id="sponsor1">  
+               				<img src="images/icon/Classcopy.png"id="sponsor1">  
               			</a>
 					</td>
 					<td>
