--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ Technology Service Corps Canada:
 			<a href="https://www.facebook.com/npower.org/"><img src="images/png/FB-f-Logo__blue_29.png" id="Facebook"></a>
 			<a href="https://twitter.com/NPowerOrg"><img src="images/brandguidelinelogos/TwitterLogo_55acee.png" id="Twitter">Twitter</a>
 			<a href="http://npowercommunityblog.tumblr.com/"><img src="images/tumblrlogobluewhite2/tumblr_logo_blue-white-32.png" id="Tumblr"></a>
-			<a href="https://www.youtube.com/user/NPowerOrg"><img src="images/png/youtube.png" id="Youtube"></a>
+			<a href="https://www.youtube.com/user/NPowerOrg"><img src="images/png/youtube.png" id="Youtube">u</a>
 	   </div>
 
 	</div>
