--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
       
       <section>
 		  <article id="banner">
-        	<img src="images/banner.png" alt="temporary place holder" height="300px">
+        		<img class="first-image" src="images/banner.png" height="300px" show>
+			<img class = "second-image" src="images/bus.png" height="300px">
+			<img class="third-image" src="images/car.png" height="300px">
+			<img class="fourth-image" src="images/invest.png" height="300px">
 		  </article>
 		  
 		  <article id="content">
