--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><!--Team babaV's AWESOME WINNING WEBSITEe!-->
+<!doctype html><!--Team babaV's AWESOME WINNING WEBSITE!-->
 <html>
 
 <head>
@@ -35,7 +35,7 @@
           <div id="socialMedia">
 		  	<a href="https://www.linkedin.com/company/npower-ny"><img src="images/png/linkedin.png" id="LinkedIn"></a>
 			<a href="https://www.facebook.com/npower.org/"><img src="images/png/FB-f-Logo__blue_29.png" id="Facebook"></a>
-			<a href="https://twitter.com/NPowerOrg"><img src="images/brandguidelinelogos/TwitterLogo_55acee.png" id="Twitter">Twitter</a>
+			<a href="https://twitter.com/NPowerOrg"><img class="two"src="images/brandguidelinelogos/TwitterLogo_55acee.png" id="Twitter"></a>
 			<a href="http://npowercommunityblog.tumblr.com/"><img src="images/tumblrlogobluewhite2/tumblr_logo_blue-white-32.png" id="Tumblr"></a>
 			<a href="https://www.youtube.com/user/NPowerOrg"><img src="images/png/youtube.png" id="Youtube"></a>
 		  </div>
@@ -117,74 +117,74 @@ NPower Canada has opened its doors at Ryerson University. The office will serve 
 				<tr> 
 					<td>
 						<a href="#">
-               				<img src="icon/Class10copy.png" id="sponsor1">  
+               				<img  class="one" src="images/icon/Class14copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="images/icon/Class9copy.png" id="sponsor1">  
+               				<img  class="one" src="images/icon/Class13copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="images/icon/Class8copy.png" id="sponsor1">  
+               				<img  class="one" src="images/icon/Class12copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="images/icon/Class7copy.png" id="sponsor1">  
+               				<img  class="one" src="images/icon/Class11copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="images/icon/Class6copy.png" id="sponsor1">  
+               				<img class="one" src="images/icon/Class10copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="images/icon/Class5copy.png" id="sponsor1">  
+               				<img  class="one"  src="images/icon/Class9copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="images/icon/Class4copy.png" id="sponsor1">  
+               				<img class="one"src="images/icon/Class8copy.png" id="sponsor1">  
+              			</a>
+					</td>
+					<td>
+						<a href="#">
+               				<img class="one" src="images/icon/Class7copy.png" id="sponsor1">  
+              			</a>
+					</td>
+					<td>
+						<a href="#">
+               				<img class="one" src="images/icon/Class6copy.png" id="sponsor1">  
+              			</a>
+					</td>
+					<td>
+						<a href="#">
+               				<img class="one"  src="images/icon/Class5copy.png" id="sponsor1">  
+              			</a>
+					</td>
+					<td>
+						<a href="#">
+               				<img class="one" src="images/icon/Class4copy.png" id="sponsor1">  
               			</a>
 					</td>
 				</tr>
 			  	<tr>
 					<td>
 						<a href="#">
-               				<img src="images/icon/Class3copy.png" id="sponsor1">  
+               				<img class="one" src="images/icon/Class3copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="images/icon/Class2copy.png" id="sponsor1">  
+               				<img class="one" src="images/icon/Class2copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
 						<a href="#">
-               				<img src="images/icon/Classcopy.png"id="sponsor1">  
-              			</a>
-					</td>
-					<td>
-						<a href="#">
-               				<img src="" id="sponsor1">  
-              			</a>
-					</td>
-					<td>
-						<a href="#">
-               				<img src="" id="sponsor1">  
-              			</a>
-					</td>
-					<td>
-						<a href="#">
-               				<img src="" id="sponsor1">  
-              			</a>
-					</td>
-					<td>
-						<a href="#">
-               				<img src="#" id="sponsor1">  
+               				<img class="one" src="images/icon/Classcopy.png"id="sponsor1">  
               			</a>
 					</td>
 				</tr>
@@ -208,7 +208,7 @@ Technology Service Corps Canada:
 	   <div id="footMediaLinks">
 		<a href="https://www.linkedin.com/company/npower-ny"><img src="images/png/linkedin.png" id="LinkedIn"></a>
 			<a href="https://www.facebook.com/npower.org/"><img src="images/png/FB-f-Logo__blue_29.png" id="Facebook"></a>
-			<a href="https://twitter.com/NPowerOrg"><img src="images/brandguidelinelogos/TwitterLogo_55acee.png" id="Twitter">Twitter</a>
+			<a href="https://twitter.com/NPowerOrg"><img class="two" src="images/brandguidelinelogos/TwitterLogo_55acee.png" id="Twitter"></a>
 			<a href="http://npowercommunityblog.tumblr.com/"><img src="images/tumblrlogobluewhite2/tumblr_logo_blue-white-32.png" id="Tumblr"></a>
 			<a href="https://www.youtube.com/user/NPowerOrg"><img src="images/png/youtube.png" id="Youtube"></a>
 	   </div>
