--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ NPower Canada has opened its doors at Ryerson University. The office will serve 
 			  	<tr>
 					<td>
 						<a href="#">
-               				<img class="one" src="images/icon/Class3copy.png" id="sponsor1">  
+               				<img class="on" src="images/icon/Class3copy.png" id="sponsor1">  
               			</a>
 					</td>
 					<td>
