--- a/index.html
+++ b/index.html
@@ -45,30 +45,30 @@
 			</div>
 		</div>
 		
-		<!-- changing to dropdown nav
-        
+	
+        <div id="horizontalNav">
 		<ul>
-          <li id="aboutus">
-            <a href="#">About Us</a>
-          </li>
-          <li id="programs">
-          <a href="#">Our Programs</a>
-          </li>
-          <li id="partners">
-          <a href="#">Our Partners</a>
-          </li>
-          <li id="engaged">
-          <a href="#">Get Engaged</a>
-          </li>
-          <li id="news">
-          <a href="#">News and Events</a>
-          </li>
-          <li id="locations">
-          <a href="#">Locations</a>
-          </li>
-        </ul>
-         -->
-
+			<li id="aboutus">
+				<a href="#">About Us</a>
+			</li>
+			<li id="programs">
+				<a href="#">Our Programs</a>
+			</li>
+			<li id="partners">
+				<a href="#">Our Partners</a>
+			</li>
+			<li id="engaged">
+				<a href="#">Get Engaged</a>
+			</li>
+			<li id="news">
+				<a href="#">News and Events</a>
+			</li>
+			<li id="locations">
+				<a href="#">Locations</a>
+			</li>
+        	</ul>
+         
+	</div>
       </nav>
 
 
