--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                     <a href="#"><img src="images/icon/Class4copy.png" id="Ryerson" width="100px"></a>
                 </div>
                 <div class="sponsors" id="group2sponsors">
-                    <a href="#"><img src="images/icon/Class3copy.png" id="RBC Foundation" width="100px"></a>
-                    <a href="#"><img src="images/icon/Class2copy.png" id="RBC" width="100px"></a>
+                    <a href="#"><img src="images/icon/Class15copy.png" id="RBC Foundation" width="100px"></a>
+                    <a href="#"><img src="images/icon/Class16copy.png" id="Pinball" width="100px"></a>
                     <a href="#"><img src="images/icon/Classcopy.png"id="Cisco" width="100px"></a>
                     <a href="#"><img src="images/icon/Class11copy.png" id="Virgin" width="100px"></a>
                     <a href="#"><img src="images/icon/Class12copy.png" id="CIBC" width="100px"></a>
