--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <!---------------------------------------BODY----------------------------------------->  
 <body>
-    <div id="container"> <!--div to contain most site elements to make it a flexbox-->
+    <div class="container"> <!--div to contain most site elements to make it a flexbox-->
 <!--------------------------------------HEADER----------------------------------------->      
         <div id="toparea">  <!-- div containing header: logo, slogan, social media etc. used for background colouring and flexbox-->
             <header>
@@ -42,7 +42,7 @@
                 </div>
             </div>
 
-            <div id="horizontalNav"> <!--this div contains the standard window-spanning nav usually used when browser is full size-->
+            <div class="nav"id="horizontalNav"> <!--this div contains the standard window-spanning nav usually used when browser is full size-->
                 <ul>
                 <li id="aboutus">
                 <a href="#">About Us</a>
@@ -74,7 +74,7 @@
             <!-- <img src="images/banner.png" alt="temporary place holder" height="300px"> -->
         </article>
 <!--------------------------------------CONTENT----------------------------------------->   
-        <section id="content">  <!--main content contained here-->
+        <section class="content">  <!--main content contained here-->
             <section id="belowBannerArea"> <!--first section directly below banner-->
                 <article id="LSarea"> <!--left side area below banner, contains big image and description-->
                     <img id="giantcircle" src="images/bus.png" height="300px" width="300px">
