--- a/index.html
+++ b/index.html
@@ -9,62 +9,68 @@
 </head>
 <!---------------------------------------BODY----------------------------------------->  
 <body>
-    <div class="container"> <!--div to contain most site elements to make it a flexbox-->
+    <div id="container"> <!--div to contain most site elements to make it a flexbox-->
 <!--------------------------------------HEADER----------------------------------------->      
         <div id="toparea">  <!-- div containing header: logo, slogan, social media etc. used for background colouring and flexbox-->
             <header>
                 <a href="index.html">    <!-- logo -->
                 <img src="images/npower-tsc-canada-logo.CYAN.png" id="npowerlogo" width="400px">  
                 </a>
-                <p><small>	*SOLGAN IDEAS* 
-                the Power to LearN is in your hands</small></p>
+                <p id="slogan"><small> Tech Skills. Opportunities. Brighter Futures. </small></p>
             </header>
             
             <div id="socialMedia">  <!--social media links-->
-                <a href="https://www.linkedin.com/company/npower-ny"><img src="images/png/linkedin.png" id="LinkedIn" width="32px"></a>
-                <a href="https://www.facebook.com/npower.org/"><img src="images/png/FB-f-Logo__white_50.png" id="Facebook" width="32px"></a>
-                <a href="https://twitter.com/NPowerOrg"><img src="images/brandguidelinelogos/TwitterLogo_white.png" id="Twitter" width="32px"></a>
-                <a href="http://npowercommunityblog.tumblr.com/"><img src="images/tumblrlogobluewhite2/tumblr_logo_blue-white-32.png" id="Tumblr"></a>
-                <a href="https://www.youtube.com/user/NPowerOrg"><img src="images/png/youtube.png" id="Youtube"></a>
+                <a href="https://www.linkedin.com/company/npower-ny">
+                    <img src="images/png/In-2C-128px-TM.png" id="socIcon"></a>
+                <a href="https://www.facebook.com/npower.org/">
+                    <img src="images/png/FB-f-Logo__blue_512.png" id="socIcon"></a>
+                <a href="https://twitter.com/NPowerOrg">
+                    <img src="images/png/Twitter2.png" id="socIcon"></a>
+                <a href="http://npowercommunityblog.tumblr.com/">
+                    <img src="images/png/tumblr_logo_blue-white-512.png" id="socIcon"></a>
+                <a href="https://www.youtube.com/user/NPowerOrg">
+                    <img src="images/png/YouTube-social-square_red_128px.png" id="socIcon"></a>
+                <a href="DONATE" id="donate">
+                    <img src="images/png/donate2.png" id="donateIcon"></a>
+                    <!--<svg width="120" height="70">
+                    <rect id="donateRect" width="110" height="60"> </rect>
+                    <text x="60px" y="35px" text-anchor="middle" alignment-baseline="central" id="donateText">Donate</text>
+                </svg></a>-->
             </div>
-        </div>
 <!---------------------------------------NAV----------------------------------------->      
-        <nav> 
-            <div class="dropdown">  <!--this div contains the clickable drop-down nav menu that's used when browser resolution is small (resized window, mobile)-->
-                <button onclick="myFunction()" class="dropbtn">Menu</button>
-                <div id="myDropdown" class="dropdown-content">
-                    <a href="Aboutus.html">About Us</a>
-                    <a href="OurPrograms.html">Our Programs</a>
-                    <a href="OurPartners.html">Our Partners</a>
-                    <a href="GetEngaged.html">Get Engaged</a>
-                    <a href="NewsandEvents.html">News and Events</a>
-                    <a href="Locations.html">Locations</a>
+            <nav> 
+                <div class="dropdown">  <!--this div contains the clickable drop-down nav menu that's used when browser resolution is small (resized window, mobile)-->
+                    <button onclick="myFunction()" class="dropbtn">Menu</button>
+                    <div id="myDropdown" class="dropdown-content">
+                        <a href="Aboutus.html">About Us</a>
+                        <a href="OurPrograms.html">Our Programs</a>
+                        <a href="OurPartners.html">Our Partners</a>
+                        <a href="GetEngaged.html">Get Engaged</a>
+                        <a href="NewsandEvents.html">News and Events</a>
+                    </div>
                 </div>
-            </div>
 
-            <div class="nav"id="horizontalNav"> <!--this div contains the standard window-spanning nav usually used when browser is full size-->
-                <ul>
-                <li id="aboutus">
-                <a href="#">About Us</a>
-                </li>
-                <li id="programs">
-                <a href="#">Our Programs</a>
-                </li>
-                <li id="partners">
-                <a href="#">Our Partners</a>
-                </li>
-                <li id="engaged">
-                <a href="#">Get Engaged</a>
-                </li>
-                <li id="news">
-                <a href="#">News and Events</a>
-                </li>
-                <li id="locations">
-                <a href="#">Locations</a>
-                </li>
-                </ul>
-            </div>
-        </nav>
+                <div id="horizontalNav"> <!--this div contains the standard window-spanning nav usually used when browser is full size-->
+                    <ul>
+                    <li id="aboutus">
+                    <a href="#" id="navButton">About Us</a>
+                    </li>
+                    <li id="programs">
+                    <a href="#" id="navButton">Our Programs</a>
+                    </li>
+                    <li id="partners">
+                    <a href="#" id="navButton">Our Partners</a>
+                    </li>
+                    <li id="engaged">
+                    <a href="#" id="navButton">Get Engaged</a>
+                    </li>
+                    <li id="news">
+                    <a href="#" id="navButton">News and Events</a>
+                    </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
 <!---------------------------------------BANNER----------------------------------------->   
         <article id="banner"> <!--banner contains multiple images with fade transitions-->
             <img class="first-image" src="images/banner.png" height="300px" width="800px" show>
@@ -74,7 +80,7 @@
             <!-- <img src="images/banner.png" alt="temporary place holder" height="300px"> -->
         </article>
 <!--------------------------------------CONTENT----------------------------------------->   
-        <section class="content">  <!--main content contained here-->
+        <section id="content">  <!--main content contained here-->
             <section id="belowBannerArea"> <!--first section directly below banner-->
                 <article id="LSarea"> <!--left side area below banner, contains big image and description-->
                     <img id="giantcircle" src="images/bus.png" height="300px" width="300px">
@@ -155,14 +161,30 @@
                 <h2> Contact</h2>
 <!--div within div for in-line positioning-->
                 <div id="footMediaLinks"> <!--footer social media links-->
-                    <a href="#"><img src="images/png/linkedin.png" id="LinkedIn"></a>
-                    <a href="#"><img src="images/png/FB-f-Logo__blue_29.png" id="Facebook"></a>
-                    <a href="#"><img src="images/png/brandguidelinelogos/TwitterLogo_#55acee.png" id="Twitter"></a>
-                    <a href="#"><img src="images/png/tumblr_logo_blue-white 2/tumblr_logo_blue-white-16.png" id="Tubmlr"></a>
+                    <a href="https://www.linkedin.com/company/npower-ny">
+                        <img src="images/png/In-2C-128px-TM.png" id="socIcon"></a>
+                    <a href="https://www.facebook.com/npower.org/">
+                        <img src="images/png/FB-f-Logo__blue_512.png" id="socIcon"></a>
+                    <a href="https://twitter.com/NPowerOrg">
+                        <img src="images/png/Twitter2.png" id="socIcon"></a>
+                    <a href="http://npowercommunityblog.tumblr.com/">
+                        <img src="images/png/tumblr_logo_blue-white-512.png" id="socIcon"></a>
+                    <a href="https://www.youtube.com/user/NPowerOrg">
+                        <img src="images/png/YouTube-social-square_red_128px.png" id="socIcon"></a>
+                    <a href="DONATE" id="donate">
+                        <img src="images/png/donate2.png" id="donateIcon"></a>
+                    <!--<svg width="120" height="70">
+                    <rect id="donateRect" width="110" height="60"> </rect>
+                    <text x="60px" y="35px" text-anchor="middle" alignment-baseline="central" id="donateText">Donate</text>
+                </svg></a>-->
                 </div>
             </div>
-            <div id="footLinks"> <!--footer site links-->
-                <p><small>Copyright 1999-2050 by Refsnes Data <a href="#">| Privacy Policy |</a><a href="#">| Resource Center |</a><a href="#">| Contact Us |</a></small></p>
+            <div id="footerLinks"> <!--footer site links-->
+                <p><small>Copyright 1999-2050 by Refsnes Data 
+                    <a class="footLinks" href="2">| Privacy Policy </a>
+                    <a class="footLinks" href="3">| Site Map </a>
+                    <a class="footLinks" href="#">| Contact Us </a>
+                </small></p>
             </div>
         </footer>
     </div>
