--- a/OurPartners.html
+++ b/OurPartners.html
@@ -4,7 +4,8 @@
 		<head>
 			<meta charset="utf-8">
 			<title>Our Partners</title>
-			<link href="css/style.css" type="text/css" rel="stylesheet">
+			<link href="css/general.css" type="text/css" rel="stylesheet">
+			<link href="css/partners.css" type="text/css" rel="stylesheet">
 			<script src="js/interact.js"></script>
 		</head>
 
