added the links for the new style sheets

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>NPower Canada</title>
-	<link href="css/style.css" type="text/css" rel="stylesheet">
+	<link href="css/general.css" type="text/css" rel="stylesheet">
+	<link href="css/index.css" type="text/css" rel="stylesheet"
 	<script src="js/interact.js"></script>
 </head>
 <!---------------------------------------BODY----------------------------------------->  
