--- a/OurPartners.html
+++ b/OurPartners.html
@@ -45,14 +45,12 @@
 				<nav>
 
 					<div class="dropdown">
-						<button onclick="myFunction()" class="dropbtn">Menu</button>
+						<button class="dropbtn">Menu</button>
 						<div id="myDropdown" class="dropdown-content">
 							<a href="Aboutus.html">About Us</a>
 							<a href="OurPrograms.html">Our Programs</a>
 							<a href="OurPartners.html">Our Partners</a>
-							<a href="GetEngaged.html">Get Engaged</a>
 							<a href="NewsandEvents.html">News and Events</a>
-							<a href="Locations.html">Locations</a>
 						</div>
 					</div>
 
@@ -68,15 +66,10 @@
 							<li id="partners">
 								<a href="#">Our Partners</a>
 							</li>
-							<li id="engaged">
-								<a href="#">Get Engaged</a>
-							</li>
 							<li id="news">
 								<a href="#">News and Events</a>
 							</li>
-							<li id="locations">
-								<a href="#">Locations</a>
-							</li>
+
 						</ul>
 
 					</div>
