--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
 <!---------------------------------------NAV----------------------------------------->      
             <nav> 
                 <div class="dropdown">  <!--this div contains the clickable drop-down nav menu that's used when browser resolution is small (resized window, mobile)-->
-                    <button onclick="myFunction()" class="dropbtn">Menu</button>
+                    <button class="dropbtn">Menu</button>
                     <div id="myDropdown" class="dropdown-content">
                         <a href="Aboutus.html">About Us</a>
                         <a href="OurPrograms.html">Our Programs</a>
                         <a href="OurPartners.html">Our Partners</a>
-                        <a href="GetEngaged.html">Get Engaged</a>
                         <a href="NewsandEvents.html">News and Events</a>
                     </div>
                 </div>
@@ -64,9 +63,6 @@
                     </li>
                     <li id="partners">
                     <a href="#" id="navButton">Our Partners</a>
-                    </li>
-                    <li id="engaged">
-                    <a href="#" id="navButton">Get Engaged</a>
                     </li>
                     <li id="news">
                     <a href="#" id="navButton">News and Events</a>
