--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
                 <div id="horizontalNav"> <!--this div contains the standard window-spanning nav usually used when browser is full size-->
                     <ul>
                     <li id="aboutus">
-                    <a href="#" id="navButton">About Us</a>
+                    <a href="Aboutus.html" id="navButton">About Us</a>
                     </li>
                     <li id="programs">
-                    <a href="#" id="navButton">Our Programs</a>
+                    <a href="OurPrograms.html" id="navButton">Our Programs</a>
                     </li>
                     <li id="partners">
-                    <a href="#" id="navButton">Our Partners</a>
+                    <a href="OurPartners.html" id="navButton">Our Partners</a>
                     </li>
                     <li id="news">
-                    <a href="#" id="navButton">News and Events</a>
+                    <a href="NewsandEvents.html" id="navButton">News and Events</a>
                     </li>
                     </ul>
                 </div>
